@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-07-24T01:05:39Z",
-  "count_outdated" : 332,
-  "uniques_outdated" : 89,
-  "count" : 333,
-  "uniques" : 90,
+  "timestamp" : "2023-08-22T08:14:00Z",
+  "count_outdated" : 333,
+  "uniques_outdated" : 90,
+  "count" : 336,
+  "uniques" : 91,
   "views" : [
     {
-      "timestamp": "2023-07-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "timestamp": "2023-08-22T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
