@@ -1,3 +1,12 @@
+2023-08-22T08:14:00Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5936198148 # 1840
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-22
+* notice: last 14d: unq all: 1 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 89 332 / 90 333
+* notice: next accum: outdated-unq outdated-all / unq all: 90 333 / 91 336
+* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [2023-07-20] / [2023-08-22]
+
 2023-07-24T01:05:39Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5639639299 # 1752
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-24
